# BudgetBytes_API

./: pyproject.toml
byteapi/: manage.py
byteapi/byteapi/: settings.py  urls.py  wsgi.py
byteapi/byteapi/utils/: scraper.py
byteapi/recipes/: admin.py  models.py  serializers.py  urls.py  views.py
byteapi/recipes/management/commands/: scrape_budget_bytes.py
byteapi/recipes/migrations/: 0001_initial.py  0002_auto_20191224_0516.py
byteapi/recipes/utils/: scraper.py
tests/: test_bytescraper.py
